public/css/master.css
/* variables for everyone#efdab9 */
:root {
  --main-bg-color: #393e44;
  --secondary-color: #4e4b4d;
  --main-font-color: #c0b199;

  --main-font-family: 'Comfortaa', cursive;
  --long-font-family: 'Open Sans', sans-serif;;
}


/* #efdab9 basic formatting */
input:focus,
select:focus,
textarea:focus,
button:focus {
    outline: none;
}

input{
  caret-color: var(--main-font-color);
  color: var(--main-font-color);
}

ul {
  list-style-type: none;
  padding:0;
}

h2,p{
  margin: 0;
  font-size: 1em;
}

p{
  font-family: var(--long-font-family);
}

/* main area */

body{
  background-color: var(--main-bg-color);
  font-size: 16px;
  font-family: var(--main-font-family);
}

/* search area */

.search-container{
  margin-top: 2em;
  margin-bottom: 1.5em;
  text-align: center;
}

.intro{
  margin: 0 auto;
  text-align: center;
  width:75%;
  color: var(--main-font-color);
}

.intro a{
  color: #d0a35a;
}

input#mainSearchBar{
  background-color: var(--main-bg-color);
  height: 3em;
  font-size: 1em;
  width: 25%;
  border: 2px solid #4e4b4d;
  border-radius: 50px;
  padding: 0 1em;
  transition: all 0.5s ease;
}

input#mainSearchBar:focus,
input#mainSearchBar:active,
input#mainSearchBar:hover{
  border-color: var(--secondary-font-color);
}

.notFound,.myName{
  margin: 0 auto;
  text-align: center;
  color: #d0a35a;
}

/* exp area */

article.expGroup ul,
article.expGroup h1{
  margin: 0 auto;
}

article.expGroup ul{
  padding: 0 1.5em;
}

article.expGroup h1{
  color: #d0a35a;
  font-weight: normal;
}

li.expItem{
  border: 1px solid var(--secondary-color);
  border-radius: 20px;
  margin: 1.5em 0;
  width: 100%;
  display: inline-flex;
  flex-direction: column;
  flex: 1;
  color: var(--main-font-color);
}

li.expItem.hidden{
  display: none;
}

article.expGroup.hidden,
.notFound{
  opacity: 0;
  transition: all 0.2s ease;
}

.notFound.show{
  opacity: 1;
  margin-top: 2em;
}

li.expItem div>*{
  padding: 0 1em;
}

li.expItem h2{
  border-bottom: 1px solid var(--secondary-color);
  padding-top: 1em;
  padding-bottom: 0.5em;
}

li.expItem h2 span{
  display: flex;
  flex-direction: column;
  justify-content: center;
}

li.expItem span.expDesc{
  font-size: 0.8em;
  font-weight: normal;
  margin-top:0.3em;
}

li.expItem p.expLongDesc{
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

li.expItem p.skillSet{
  border-top: 1px solid var(--secondary-color);
  padding-top: 0.5em;
  padding-bottom: 1em;
  overflow-wrap: break-word;
}

li.expItem p.skillSet>span{
  padding-right: 0.4em;
  word-wrap: normal;
  display: inline-block;
}

li.expItem p.skillSet span .pillow{
  color: #d0a35a;
}

@media only screen and (min-width: 600px) {
  article.expGroup ul,
  article.expGroup h1,
  .notFound,
  input#mainSearchBar,
  .myName,
  .intro,
  li.expItem p.skillSet{
    max-width: 30em;
  }
}

